Terraform/Lab2/Public_Subnet.tf
resource "aws_subnet" "cba_public" {
  vpc_id                  = aws_vpc.my_vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "eu-west-2a"

  tags = {
    Name = "ApachePublicSubnet"
  }
}
